--- a/Workshop/Pages/EditCar.razor
+++ b/Workshop/Pages/EditCar.razor
@@ -69,5 +69,5 @@
         navigationManager.NavigateTo("/cars");
     }
 
-    void Cancel() => navigationManager.NavigateTo("/clients");
+    void Cancel() => navigationManager.NavigateTo("/cars");
 }
