--- a/Workshop/Pages/Employees.razor
+++ b/Workshop/Pages/Employees.razor
@@ -11,6 +11,7 @@
 }
 else
 {
+    <button type="button" class="btn btn-primary" @onclick="() => AddNewEmployee()">Dodaj nowego pracownika</button>
     @if (employees.Any())
     {
         <table class="table  table-striped table-bordered" style="text-align:center; margin-top: 16px;">
@@ -21,9 +22,7 @@ else
                     <th>Nazwisko</th>
                     <th>Nazwa użytkownika</th>
                     <th>Hasło</th>
-                    <th>
-                        <button type="button" class="btn btn-primary" @onclick="() => AddNewEmployee()">Dodaj nowego pracownika</button>
-                    </th>
+                    <th>Akcje</th>
                 </tr>
             </thead>
             <tbody>
