--- a/Workshop/Pages/Activities.razor
+++ b/Workshop/Pages/Activities.razor
@@ -92,12 +92,13 @@ else
         if(employee.Role == Role.Worker)
         {
             activities = await activityService.GetWorkerActivities(employee.Id);
-            activities.OrderBy(a => a.Request);
+            activities = activities.OrderBy(a => a.Request).ThenBy(a => a.SequenceNumber);
         }
         else if(RequestId != Guid.Empty)
         {
             request = await requestService.GetRequest(RequestId);
             activities = request.Activities;
+            activities = activities.OrderBy(a => a.SequenceNumber);  
         }
         await base.OnInitializedAsync();
     }
