--- a/Workshop/Pages/Login.razor
+++ b/Workshop/Pages/Login.razor
@@ -34,16 +34,16 @@
                         <br />
                     </div>
                     <div class="col-12 row login-input">
-                        <input type="text" class="form-control col-12" @bind="employee.Username" placeholder="Username" />
+                        <input type="text" class="form-control col-12" @bind="employee.Username" placeholder="Nazwa użytkownika" />
                     </div>
                     <br />
                     <div class="col-12 row login-input">
-                        <input type="password" class="form-control col-12" @bind="employee.Password" placeholder="Password" />
+                        <input type="password" class="form-control col-12" @bind="employee.Password" placeholder="Hasło" />
                     </div>
                     <br />
                     <div class="col-12 row login-input">
                         <span class="col-12"></span>
-                        <input type="submit" class="form-control col-6 btn btn-primary" value="SIGN IN" />
+                        <input type="submit" class="form-control col-6 btn btn-primary" value="Zaloguj się" />
                     </div>
                     <ValidationSummary />
                     <br />
