--- a/Workshop/Pages/AssignActivities.razor
+++ b/Workshop/Pages/AssignActivities.razor
@@ -5,8 +5,8 @@
 @inject Microsoft.AspNetCore.Components.NavigationManager navigationManager
 @attribute [AuthorizeRoles(Role.Manager)]
 
-@if(Guid.Empty == WorkerId) 
-{ 
+@if(Guid.Empty == WorkerId)
+{
     <h3>
         Brak przypisywanego pracownika!
     </h3>
@@ -20,11 +20,6 @@ else
     <h3>
         Przypisywany pracownik: @worker.FirstName @worker.LastName (@worker.Username)
     </h3>
-    <div class="row" style="padding-top: 10px; padding-bottom: 10px">
-        <div class="col-md-4">
-            <button type="button" class="btn btn-primary" @onclick="() => Assign()">Zapisz</button>
-        </div>
-    </div>
 
     @if (request == null)
     {
@@ -32,31 +27,45 @@ else
     }
     else
     {
-        <table class="table  table-striped table-bordered" style="text-align:center;">
-            <thead>
-                <tr>
-                    <th>Opis</th>
-                    <th>Typ</th>
-                    <th>Wynik</th>
-                    <th>Data rozpoczęcia</th>
-                    <th>Przypisany pracownik</th>
-                    <th>Przypisz</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var activity in activities)
-                {
+        if (request.Activities.Any())
+        {
+            <div class="row" style="padding-top: 10px; padding-bottom: 10px">
+                <div class="col-md-4">
+                    <button type="button" class="btn btn-primary" @onclick="() => Assign()">Zapisz</button>
+                </div>
+            </div>
+            <table class="table  table-striped table-bordered" style="text-align:center;">
+                <thead>
                     <tr>
-                        <td>@activity.Description</td>
-                        <td>@activity.ActivityType.ActivityName</td>
-                        <td>@activity.Result</td>
-                        <td>@activity.Registered</td>
-                        <td>@(activity.Worker != null ? activity.Worker.FirstName + " " + activity.Worker.LastName + " (" + activity.Worker.Username + ")" : "Brak")</td>
-                        <td><input type="checkbox" class="checkbox-assign" @bind="assignActivities[activities.IndexOf(activity)]"></td>
+                        <th>Opis</th>
+                        <th>Typ</th>
+                        <th>Wynik</th>
+                        <th>Data rozpoczęcia</th>
+                        <th>Przypisany pracownik</th>
+                        <th>Przypisz</th>
                     </tr>
-                }
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                    @foreach (var activity in activities)
+                    {
+                        <tr>
+                            <td>@activity.Description</td>
+                            <td>@activity.ActivityType.ActivityName</td>
+                            <td>@activity.Result</td>
+                            <td>@activity.Registered</td>
+                            <td>@(activity.Worker != null ? activity.Worker.FirstName + " " + activity.Worker.LastName + " (" + activity.Worker.Username + ")" : "Brak")</td>
+                            <td><input type="checkbox" class="checkbox-assign" @bind="assignActivities[activities.IndexOf(activity)]"></td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        }
+        else
+        {
+            <div style="padding-top: 25px">
+                <h2>To zlecenie nie ma żadnych aktywności</h2>
+            </div>
+        }
     }
 }
 
