--- a/Workshop/Shared/NavMenu.razor
+++ b/Workshop/Shared/NavMenu.razor
@@ -18,7 +18,7 @@
             <NotAuthorized>
                 <li class="nav-item px-3">
                     <NavLink class="nav-link" href="login">
-                        <span class="oi oi-plus" aria-hidden="true"></span> Login
+                        <span class="oi oi-plus" aria-hidden="true"></span> Zaloguj się
                     </NavLink>
                 </li>
             </NotAuthorized>
